# pallet-supernova-pasta

./: .gitignore  Cargo.toml  README.md  _sigtest.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
fixtures/pasta-fib-n10/: METADATA.md  proof.blake2b256  proof.json  vk.blake2b256  vk.hash  vk.sha256
src/: lib.rs  main.rs
supernova-gen/: Cargo.toml  inputs.json  proof.json
supernova-gen/src/: main.rs
tests/: verify.rs
