[package]
name = "verifier-supernova"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["supernova-gen"]
resolver = "2"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
base64 = "0.22"
bincode = "=2.0.1"

# tambahan yang diperlukan untuk lib.rs (ff::PrimeField & hex::encode)
ff = "0.13"
hex = "0.4"

# Nova/SuperNova
nova-snark = "0.41"

# (opsional; boleh dibiarkan meski tidak dipakai langsung di CLI)
ark-ff = { version = "0.4", features = ["std"] }
ark-ec = { version = "0.4", features = ["std"] }
ark-serialize = "0.4"
ark-std = { version = "0.4", features = ["std"] }
ark-pallas = { version = "0.4", features = ["std"] }
ark-vesta  = { version = "0.4", features = ["std"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
