[package]
name = "verifier-supernova"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["supernova-gen"]
resolver = "2"

[dependencies]
anyhow = "=1.0.99"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.142"
serde_path_to_error = "=0.1.17"
base64 = "=0.22.1"
bincode = "=1.3.3"

# tambahan untuk lib.rs (ff::PrimeField & hex::encode)
ff = "=0.13.1"
hex = "=0.4.3"

# Nova/SuperNova
nova-snark = "=0.41.0"

# (opsional; boleh ada meski tidak dipakai langsung oleh CLI)
ark-ff = { version = "=0.4.2", features = ["std"] }
ark-ec = { version = "=0.4.2", features = ["std"] }
ark-serialize = "=0.4.2"
ark-std = { version = "=0.4.0", features = ["std"] }
ark-pallas = { version = "=0.4.0", features = ["std"] }
ark-vesta  = { version = "=0.4.0", features = ["std"] }

[dev-dependencies]
assert_cmd = "=2.0.17"
predicates = "=3.1.3"
