[package]
name = "supernova-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.99"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.142"
base64 = "=0.22.1"
bincode = "=1.3.3"
ff = "=0.13.1"
hex = "=0.4.3"
nova-snark = "=0.41.0"

ark-ff = { version = "=0.4.2", features = ["std"] }
ark-ec = { version = "=0.4.2", features = ["std"] }
ark-serialize = "=0.4.2"
ark-std = { version = "=0.4.0", features = ["std"] }
ark-pallas = { version = "=0.4.0", features = ["std"] }
ark-vesta  = { version = "=0.4.0", features = ["std"] }
